--- a/module-4/10_CSS_Selectors/student-exercise/style.css
+++ b/module-4/10_CSS_Selectors/student-exercise/style.css
@@ -15,3 +15,85 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+aside {
+  position: fixed;
+  width: 200px;
+  height: 100vh;
+  border-right: 1px solid rgba(0, 173, 238, 0.4);
+  padding-left: 20px;
+  padding-right: 20px;
+  
+}
+
+aside > img {
+  height: 120px;
+  display: block;
+  margin: 0 auto;
+}
+
+main {
+  padding-left: 220px;
+  padding-right: 20px;
+}
+
+
+
+aside > nav > ul > li {
+  text-align: center;
+  list-style: none;
+  text-transform: uppercase;
+  border-bottom: 1px solid rgba(0, 173, 238, 0.4);
+  margin: 10px auto;
+  padding-bottom: 10px;
+  width: 80%;
+  line-height: 2;
+}
+
+aside > nav > ul > li > a {
+  color: #00adee;
+  text-decoration: none;
+  font-weight: bold;
+  
+}
+
+aside > nav > ul > li > a:hover {
+  text-decoration: underline;
+}
+
+main > header {
+  height: 120px;
+}
+
+main > header > img {
+  height: 80%;
+}
+
+.banner {
+  display: block;
+  width: 100%;
+}
+
+main > section > div {
+  display: inline-block;
+  width: 33%;
+  
+  padding-right: 20px;
+  margin-top: 20px;
+}
+
+main > section > div > h2 {
+  color: #8CC36F;
+}
+
+main > section > div > h2 > i {
+  margin-right: 10px;
+}
+
+main > section > div:not(:last-child) {
+  border-right: 1px solid rgba(170, 239, 135, 0.8);
+}
+
+main > section > div:not(:first-child) {
+  padding-left: 20px;
+}
