--- a/module-4/11-CSS_Grid_and_Flexbox/tutorials/flexbox-student-tutorial/styles.css
+++ b/module-4/11-CSS_Grid_and_Flexbox/tutorials/flexbox-student-tutorial/styles.css
@@ -11,6 +11,10 @@ body {
   box-shadow: 0 4px 5px 0 rgba(0,0,0,0.14), 0 1px 10px 0 rgba(0,0,0,0.12), 0 2px 4px -1px rgba(0,0,0,0.2);
   padding-left: 10px;
   padding-right: 10px;
+  grid-area: header;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 #left-panel {
   grid-area: left-panel;
@@ -22,14 +26,19 @@ aside#special-announcements {
   grid-area: special-announcements;
 }
 
+aside#weather {
+  grid-area: weather;
+}
+
 div.container {
   display: grid;
   grid-template-columns: 300px 1fr 250px;
   grid-template-rows: 100px 1fr 1fr;
   gap: 15px;
   grid-template-areas:
+    "header header header"
     "left-panel main special-announcements"
-    "left-panel main .";
+    "left-panel main weather";
 }
 
 #page-header img {
@@ -187,6 +196,7 @@ aside#weather section p {
     height: auto;
     width: 100%;
     padding: 0;
+    justify-content: space-evenly;
   }
   #page-header img {
     height: 40px;
@@ -231,11 +241,17 @@ aside#weather section p {
     border-bottom: none;
     border-right: solid black 1px;
   }
+
+  aside#weather section {
+    display: flex;
+    justify-content: space-around;
+  }
 }
 
 @media screen and (max-width: 536px) {
   #page-header {
     padding-top: 5px;
+    flex-wrap: wrap;
   }
   #page-header nav ul {
     margin-top: 10px;
@@ -247,5 +263,9 @@ aside#weather section p {
   #weather section p:not(:last-child) {
     border-bottom: solid black 1px;
     border-right: none;
+  }
+
+  aside#weather section {
+    flex-direction: column;
   }
 }
