--- a/module-4/11-CSS_Grid_and_Flexbox/lecture-final/grid-lecture/css-variables/style.css
+++ b/module-4/11-CSS_Grid_and_Flexbox/lecture-final/grid-lecture/css-variables/style.css
@@ -1,29 +1,33 @@
+:root {
+    --text-color: blue;
+    --content-width: 50vw;
+}
 
 h1 {
-    color: blue;
+    color: var(--text-color);
 }
 
 section h2 {
     background-color: yellow;
-    color: orangered;
-    width: 75w;
+    color: var(--text-color);
+    width: var(--content-width);
 }
 
 section > p {
-    color: green;
+    color: var(--text-color);
     font-size: 1.5rem;
 }
 
 section > div {
-    color: purple;
+    color: var(--text-color);
     font-size: 1.75rem;
     border: 1px solid black;
     padding: 10px;
-    width: 75w;
+    width: var(--content-width);
 }
 
 section > div > p {
-    color: teal;
+    color: var(--text-color);
     background-image: linear-gradient(lightblue, pink);
     padding: 5px;
 }
