--- a/module-4/11-CSS_Grid_and_Flexbox/student-exercises/grid/style.css
+++ b/module-4/11-CSS_Grid_and_Flexbox/student-exercises/grid/style.css
@@ -50,3 +50,116 @@ header img {
 #student-picture img{
     border-radius: 50%;
 }
+
+#main-grid {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    grid-template-areas: 
+    "headline picture"
+    "quote picture"
+    "profile contact"
+    "experience experience";
+    grid-column-gap: 25px;
+    
+}
+
+#experience-grid {
+    grid-area: experience;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 
+    "code code"
+    "database database"
+    "web design";
+    grid-column-gap: 50px;
+}
+
+#headline {
+    grid-area: headline;
+    height: max-content;
+}
+
+#student-picture {
+    grid-area: picture;
+    justify-self: center;
+}
+
+#student-profile {
+    grid-area: profile;
+}
+
+#student-quote {
+    grid-area: quote;
+}
+
+#student-contact {
+    grid-area: contact;
+    justify-self: center;
+    align-self: center;
+}
+
+#experience-code {
+    grid-area: code;
+}
+
+#experience-database {
+    grid-area: database;
+} 
+
+#experince-web {
+    grid-area: web;
+}
+
+#experience-design {
+    grid-area: design;
+}
+
+@media only screen and (max-width: 1024px) {
+    #main-grid {
+        column-gap: 35px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "headline headline"
+        "quote picture"
+        "quote contact"
+        "profile profile"
+        "experience experience";
+    }
+
+    #experience-grid {
+        column-gap: 20px;
+        row-gap: 20px;
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+        "code web"
+        "database design";
+    }
+
+    #student-quote {
+        align-self: center;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    #main-grid {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "headline"
+        "picture"
+        "contact"
+        "quote"
+        "profile"
+        "experience";
+    }
+
+    #experience-grid {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "code"
+        "web"
+        "database"
+        "design";
+    }
+}
