--- a/module-4/15-Week1_Review/candy_corn_and_css/main.css
+++ b/module-4/15-Week1_Review/candy_corn_and_css/main.css
@@ -59,3 +59,59 @@
     line-height: 40px;
     border-radius: 5px;
   }
+
+  nav {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+
+  main {
+    display: flex;
+  }
+
+  main img {
+    width: 35%;
+    height: 350px;
+    object-fit: cover;
+  }
+
+  main div.content {
+    padding-left: 20px;
+  }
+
+  #store h3 {
+    text-align: center;
+  }
+
+  #store a {
+    text-align: center;
+    background-color: var(--black);
+    width: 25%;
+    line-height: 30px;
+    display: block;
+    color: var(--grey);
+    box-shadow: 3px 3px #8b8b8b;
+  }
+
+  #store {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  a {
+    color: var(--black);
+    text-decoration: none;
+    border-radius: 5px;
+    text-transform: uppercase;
+    font-weight: bold;
+  }
+  
+  a:hover{
+    text-decoration: underline;
+  }
+
+  nav li{
+    box-shadow: 5px 3px;
+  } 
