--- a/module-4/25-JavaScript_Review/js-review_ship-game/css/main.css
+++ b/module-4/25-JavaScript_Review/js-review_ship-game/css/main.css
@@ -15,7 +15,7 @@ section {
 }
 
 .row {
-    border: 0px solid green;
+    border: 0px solid red;
     width: 100%;
     height: 10%;
     margin: 0px;
